# CMatrix

./: .gitignore  CMakeLists.txt
src/: Makefile  main.c  s21_matrix.h  temp.txt
src/lib/: s21_calc_complements.c  s21_create_matrix.c  s21_determinant.c  s21_eq_matrix.c  s21_inverse_matrix.c  s21_mult_matrix.c  s21_mult_number.c  s21_remove_matrix.c  s21_sub_matrix.c  s21_sum_matrix.c  s21_transpose.c  s21_utils.c
src/tests/: s21_test_calc_complements.c  s21_test_create_matrix.c  s21_test_determinant.c  s21_test_eq_matrix.c  s21_test_inverse_matrix.c  s21_test_matrix.c  s21_test_matrix.h  s21_test_mult_matrix.c  s21_test_mult_number.c  s21_test_remove_matrix.c  s21_test_sub_matrix.c  s21_test_sum_matrix.c  s21_test_transpose.c
